# rod-hockey-robot

./: .env  .gitignore  Makefile  README.md  README_MODULE.md  action.py  auto.py  build-module.sh  calc.py  home.py  list_resources.py  main.py  meta.json  module.py  move.py  pyproject.toml  rod.py  routine.py  run_play.py  simulate.py
archive/: calc2.py  calculate.py  calculate2.py  calculate3.py  calculateML.py  calculateML2.py  main.py  ml.py  ml2.py  requirements.txt  runML.py  vision.py  vision2.py
data/: left-defense-hockey-player.jsonl  rod_left-defense-hockey-player.jsonl
docs/superpowers/plans/: 2026-05-07-hockey-player-migration.md  2026-05-21-autonomous-puck-control.md  2026-05-21-coordinated-relay-routine.md  2026-05-21-one-rod-puck-control.md
docs/superpowers/specs/: 2026-05-21-autonomous-puck-control-design.md  2026-05-21-coordinated-relay-routine-design.md  2026-05-21-one-rod-puck-control-design.md  2026-05-21-visual-servo-relay-design-v2.md
engine/: constants.py  display.py  entities.py  planner.py
module/: constants.py
module/models/: rod_hockey_game.py
robot/: autonomy.py  const.py  execution.py  playbook.py  puck_model.py  reward.py  rl_agent.py  rod_model.py  rod_session.py  routine.py  state.py  vision.py  zones.json
tests/: test_annotate_build_zone.py  test_player_component_map.py  test_puck_model.py  test_rod_model.py  test_routine.py  test_seed_zones.py  test_select_playbook.py  test_vision_puck.py  test_zones_json_resolves.py
tools/: annotate_zones.html  annotate_zones.py  check_puck.py  seed_zones_from_legacy.py
(+3 files in other folders)
