[project]
name = "rod-hockey-robot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "gymnasium>=1.2.3",
    "mujoco>=3.6.0",
    "numpy>=2.4.4",
    "pillow>=10.0.0",
    "pygame>=2.6.1",
    "stable-baselines3>=2.8.0",
    "viam-sdk>=0.71.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pytest>=9.0.0",
]
